--- a/index.html
+++ b/index.html
@@ -6,16 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <header>
-    <img src="./pictures/menu/logo.png" , class="logoImg">
-    <div class="menu-block-picture">
-        <img src="./pictures/menu/home.png" class="menu-picture">
-    </div>
-    <div class="menu-block-picture">
-        <img src="./pictures/menu/exit.png" class="menu-picture"></div>
-    <div class="menu-block-picture">
-        <img src="./pictures/menu/mainPhoto.png" class="menu-picture-margin" title="Main Person">
-    </div>
-    <div class="name-of-user"><label>Main Person</label></div>
+    <img src="./pictures/logo.png" , class="logoImg">
 
 </header>
 <body>
@@ -37,148 +28,11 @@
 </div>
 <div class="scroll-block">
     <div class="posts">
-        <img src="./pictures/menu/mainPhoto.png" class="avaPost">
-        <pre class="postUser">Main Person</pre>
-        <pre class="dataUser">22.06.99</pre>
-        <pre class="dataUser">04:00</pre>
-        <br>
-        <img src="./pictures/posts/post1/Rome.jpg" class="photoPost">
-        <br>
-        <img src="./pictures/posts/NotPressed.png" class="likePost">
-        <pre class="textLike">131</pre>
-        <pre class="textComment">Beautiful Rome!</pre>
-        <img src="./pictures/posts/edit.png" class="editPost">
-        <img src="./pictures/posts/delete.png" class="editPost">
-        <pre class="textHashTag">#Rome#Italy</pre>
-    </div>
-    <div class="posts">
-        <img src="./pictures/posts/post1/avaOther.png" class="avaPost">
-        <pre class="postUser">Other Person</pre>
-        <pre class="dataUser">22.06.99</pre>
-        <pre class="dataUser">04:00</pre>
-        <br>
-        <img src="./pictures/posts/post2/Paris.jpg" class="photoPost">
-        <br>
-        <img src="./pictures/posts/NotPressed.png" class="likePost">
-        <pre class="textLike">131</pre>
-        <pre class="textComment">I love France!!</pre>
-        <pre class="textHashTag">#Paris#France</pre>
-    </div>
-    <div class="posts">
-        <img src="./pictures/posts/post1/avaOther.png" class="avaPost">
-        <pre class="postUser">firstPerson</pre>
-        <pre class="dataUser">22.06.99</pre>
-        <pre class="dataUser">04:00</pre>
-        <br>
-        <img src="./pictures/posts/post3/Venice.jpg" class="photoPost">
-        <br>
-        <img src="./pictures/posts/NotPressed.png" class="likePost">
-        <pre class="textLike">131</pre>
-        <pre class="textComment">My favourite town!</pre>
-        <pre class="textHashTag">#Venice#Italy</pre>
-    </div>
-    <div class="posts">
-        <img src="./pictures/posts/post1/avaOther.png" class="avaPost">
-        <pre class="postUser">firstPerson</pre>
-        <pre class="dataUser">22.06.99</pre>
-        <pre class="dataUser">04:00</pre>
-        <br>
-        <img src="./pictures/posts/post1/Rome.jpg" class="photoPost">
-        <br>
-        <img src="./pictures/posts/NotPressed.png" class="likePost">
-        <pre class="textLike">131</pre>
-        <pre class="textComment">Rome!</pre>
-        <pre class="textHashTag">#Rome#Italy</pre>
-    </div>
-
-    <div class="posts">
-        <img src="./pictures/posts/post1/avaOther.png" class="avaPost">
-        <pre class="postUser">firstPerson</pre>
-        <pre class="dataUser">22.06.99</pre>
-        <pre class="dataUser">04:00</pre>
-        <br>
-        <img src="./pictures/posts/post1/Rome.jpg" class="photoPost">
-        <br>
-        <img src="./pictures/posts/NotPressed.png" class="likePost">
-        <pre class="textLike">131</pre>
-        <pre class="textComment">Rome!</pre>
-        <pre class="textHashTag">#Rome#Italy</pre>
-    </div>
-
-    <br>
-
-    <div class="posts">
-        <img src="./pictures/posts/post1/avaOther.png" class="avaPost">
-        <pre class="postUser">firstPerson</pre>
-        <pre class="dataUser">22.06.99</pre>
-        <pre class="dataUser">04:00</pre>
-        <br>
-        <img src="./pictures/posts/post1/Rome.jpg" class="photoPost">
-        <br>
-        <img src="./pictures/posts/NotPressed.png" class="likePost">
-        <pre class="textLike">131</pre>
-        <pre class="textComment">Rome!</pre>
-        <pre class="textHashTag">#Rome#Italy</pre>
-    </div>
-    <div class="posts">
-        <img src="./pictures/posts/post1/avaOther.png" class="avaPost">
-        <pre class="postUser">firstPerson</pre>
-        <pre class="dataUser">22.06.99</pre>
-        <pre class="dataUser">04:00</pre>
-        <br>
-        <img src="./pictures/posts/post1/Rome.jpg" class="photoPost">
-        <br>
-        <img src="./pictures/posts/NotPressed.png" class="likePost">
-        <pre class="textLike">131</pre>
-        <pre class="textComment">Rome!</pre>
-        <pre class="textHashTag">#Rome#Italy</pre>
-    </div>
-    <div class="posts">
-        <img src="./pictures/posts/post1/avaOther.png" class="avaPost">
-        <pre class="postUser">firstPerson</pre>
-        <pre class="dataUser">22.06.99</pre>
-        <pre class="dataUser">04:00</pre>
-        <br>
-        <img src="./pictures/posts/post1/Rome.jpg" class="photoPost">
-        <br>
-        <img src="./pictures/posts/NotPressed.png" class="likePost">
-        <pre class="textLike">131</pre>
-        <pre class="textComment">Rome!</pre>
-        <pre class="textHashTag">#Rome#Italy</pre>
-    </div>
-    <div class="posts">
-        <img src="./pictures/posts/post1/avaOther.png" class="avaPost">
-        <pre class="postUser">firstPerson</pre>
-        <pre class="dataUser">22.06.99</pre>
-        <pre class="dataUser">04:00</pre>
-        <br>
-        <img src="./pictures/posts/post1/Rome.jpg" class="photoPost">
-        <br>
-        <img src="./pictures/posts/NotPressed.png" class="likePost">
-        <pre class="textLike">131</pre>
-        <pre class="textComment">Rome!</pre>
-        <pre class="textHashTag">#Rome#Italy</pre>
-    </div>
-
-    <div class="posts">
-        <img src="./pictures/posts/post1/avaOther.png" class="avaPost">
-        <pre class="postUser">firstPerson</pre>
-        <pre class="dataUser">22.06.99</pre>
-        <pre class="dataUser">04:00</pre>
-        <br>
-        <img src="./pictures/posts/post1/Rome.jpg" class="photoPost">
-        <br>
-        <img src="./pictures/posts/NotPressed.png" class="likePost">
-        <pre class="textLike">131</pre>
-        <pre class="textComment">Rome!</pre>
-        <pre class="textHashTag">#Rome#Italy</pre>
-
     </div>
     <br>
-    <div class="downloadYet"><img src="./pictures/menu/downloadYet.png" class="downloadYet"></div>
+    <div class="downloadYet"><img src="./pictures/downloadYet.png" class="downloadYet"></div>
 </div>
 <div class="menu">
-    <div class="menu-block-add"><img src="./pictures/menu/add.png" class="menu-picture-margin-add"></div>
 </div>
 <script src="scrypt.js"></script>
 </body>
