--- a/UI/index.html
+++ b/UI/index.html
@@ -27,7 +27,7 @@
     </select>
     <p class="descriptionAdding" id ="userEdit"> User: </p>
     <p class="descriptionAdding" id ="dataEdit">Date: </p>
-    <img src="./pictures/menu/add.png" id="editFormAdd" class="menu-picture-margin" alt="Add new post">
+    <img src="pictures/menu/add.png" id="editFormAdd" class="menu-picture-margin" alt="Add new post">
 </div>
 
 <div class="formAddingPost" id="formAddPost">
@@ -48,11 +48,11 @@
     </select>
     <p class="descriptionAdding" id ="userAdding">User: </p>
     <p class="descriptionAdding" id ="dataAdding">Date: </p>
-    <img src="./pictures/menu/add.png" id="addingFormAdd" class="menu-picture-margin" alt="Add new post">
+    <img src="pictures/menu/add.png" id="addingFormAdd" class="menu-picture-margin" alt="Add new post">
 </div>
 <div class="grayBackground" id="grayBckd"></div>
 <div class="formAuthorization" id="formAuth">
-    <img src="./pictures/auth.png" alt="Logo" class="authLogo">
+    <img src="pictures/auth.png" alt="Logo" class="authLogo">
     <div class="authInputes">
         <p class="pAuth">Authorisation</p>
         <div class="inpDivAuth"><input class="inputAuth" type="text" value="Login" id="logAuth"></div>
@@ -62,7 +62,7 @@
 </div>
 <div>
     <header>
-        <img src="./pictures/logo.png" alt="Town Viewer" class="logoImg">
+        <img src="pictures/logo.png" alt="Town Viewer" class="logoImg">
     </header>
     <!--block of filters-->
     <div class="filters">
@@ -84,7 +84,7 @@
     </div>
     <div class="posts">
     </div>
-    <div class="downloadMore" id="downMore"><img src="./pictures/downloadYet.png" class="downloadMore" alt="Next 10"></div>
+    <div class="downloadMore" id="downMore"><img src="pictures/downloadYet.png" class="downloadMore" alt="Next 10"></div>
     <div class="menu" id="menu">
     </div>
         <script src="scrypt.js"></script>
